fixed horizontal scroll bar

--- a/css/main.css
+++ b/css/main.css
@@ -65,8 +65,8 @@ nav.drive-nav.scrolled-nav{
 
 /* Section title styles start */
 .section-title {
-    margin-top:100px;
-    margin-bottom:60px;
+    padding-top:100px;
+    padding-bottom:60px;
 }
 .section-title h1 {
     font-weight: 600;
